--- a/button_style.css
+++ b/button_style.css
@@ -26,10 +26,27 @@ body {
     width: 40%;
     box-shadow: 1rem 1rem 8px rgba(0, 0, 0, 0.7);
     color: white;
+    max-height: 100vh;
+    overflow-y: auto;
 }
+
+/* 画面縦幅が狭かった時に表示されるスクロールバー */
+.row::-webkit-scrollbar {
+    width: 7px;
+}
+
+.row::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.row::-webkit-scrollbar-thumb {
+    background-color: rgba(136, 136, 136, 0.8);
+    border-radius: 5px;
+}
+
 .background {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url(images/modern-kitchen.webp);
     background-repeat: no-repeat;
     object-fit: cover;
@@ -159,5 +176,10 @@ body {
     .btn-width {
         width: 11rem;
         margin: 1rem auto 0 auto;
+    }
+}
+@media (max-height: 500px) {
+    .background {
+        min-height: 130vh;
     }
 }
