add restaurant-search button

--- a/button_style.css
+++ b/button_style.css
@@ -3,7 +3,7 @@ html {
     font-size: 100%;
 }
 body {
-    font-family: "Zen Kaku Gothic New", 'Montserrat', sans-serif;
+    font-family: "M PLUS 1p", "Zen Kaku Gothic New", 'Montserrat', sans-serif;
 }
 .material-symbols-outlined {
     font-size: 3rem;
