--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ img {
     max-width: 100%;
 }
 body {
-    font-family: "Zen Kaku Gothic New", 'Montserrat', sans-serif;
+    font-family: "M PLUS 1p", "Zen Kaku Gothic New", 'Montserrat', sans-serif;
 }
 .background {
     width: 100vw;
@@ -28,6 +28,7 @@ body {
 .material-symbols-outlined {
     font-size: 2.5rem;
     color: #8c6239;
+    margin-bottom: 0.5rem;
 }
 .fa-utensils {
     text-align: center;
@@ -37,6 +38,7 @@ body {
 .fa-kitchen-set {
     font-size: 2rem;
     color: #8c6239;
+    margin-bottom: 1rem;
 }
 .header-container {
     margin-top: 1rem;
@@ -123,6 +125,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}  
+  .content-title h4 {
+    font-family: "M PLUS 1p", sans-serif;
+    font-weight: 900;
 }
 .content-text {
     word-wrap: break-word;
@@ -157,6 +163,36 @@ ul li::before {
     left: 0; /* マーカーをリスト項目の左端に配置 */
     transform: translateX(-50%); /* マーカーを中央に配置 */
 }
+#getting-location {
+    font-size: 0.9rem;
+    font-family: "Yomogi", cursive;
+    font-weight: 900;
+}
+/* お店ボタン */
+.restaurants {
+    color: black;
+    background-color: transparent;
+    border: 2px solid rgba(0, 0, 0, 0.4);
+    padding: 0.6rem 0;
+    width: 16.5rem;
+    margin: 0.5rem auto;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition:.3s;
+    font-family: "Yomogi", cursive;
+}
+.restaurants button {
+    font-size: 1.05rem;
+    font-weight: 900;
+}
+.restaurants:hover {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7); 
+    font-weight:bold;
+    transform: scale(1.05);
+  }
 
 /* ボタン */
 .button {
@@ -221,6 +257,18 @@ ul li::before {
     width: 85%;
 }
 }
+@media screen and (max-width: 350px){
+    .col {
+    width: 98%;
+}
+.content-title h4 {
+    font-size: 1.2rem;
+}
+.genre-text {
+    width: 80%;
+    margin: 0 auto;
+}
+}
 
 @media (min-width: 505px) {
     .header-container {
@@ -231,4 +279,3 @@ ul li::before {
         flex-direction: row;
     }
 }
-
